Borrado de cuentas de tweet done

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -153,7 +153,7 @@
                                                         <!--{{tw.extended_entities.media[0].type}}-->
                                                         <!--{{tw.extended_entities.media[0].video_info.variants[0].url}}-->
                                                         <!--{{tw.extended_entities.media[0].url}}-->
-                                                        <img ng-src="{{tw.extended_entities.media[0].media_url}}" class="col-sm-10 col-md-offset-2">
+                                                        <img ng-src="{{tw.extended_entities.media[0].media_url}}" class="col-md-6 col-md-offset-6">
                                                         <!--<video ng-if="tw.extended_entities.media[0].type == 'video'" width="320" height="240" controls>-->
                                                             <!--<source src="movie.mp4" type="video/mp4">-->
                                                             <!--<source src="movie.ogg" type="video/ogg">-->
@@ -207,7 +207,7 @@
                                                         <!--{{tw.extended_entities.media[0].type}}-->
                                                         <!--{{tw.extended_entities.media[0].video_info.variants[0].url}}-->
                                                         <!--{{tw.extended_entities.media[0].url}}-->
-                                                        <img ng-src="{{tw.extended_entities.media[0].media_url}}" class="col-sm-10 col-md-offset-2">
+                                                        <img ng-src="{{tw.extended_entities.media[0].media_url}}" class="col-md-6 col-md-offset-6">
                                                         <!--<video ng-if="tw.extended_entities.media[0].type == 'video'" width="320" height="240" controls>-->
                                                         <!--<source src="movie.mp4" type="video/mp4">-->
                                                         <!--<source src="movie.ogg" type="video/ogg">-->
@@ -257,7 +257,7 @@
                                                         <!--{{tw.extended_entities.media[0].type}}-->
                                                         <!--{{tw.extended_entities.media[0].video_info.variants[0].url}}-->
                                                         <!--{{tw.extended_entities.media[0].url}}-->
-                                                        <img ng-src="{{tw.extended_entities.media[0].media_url}}" class="col-sm-10 col-md-offset-2">
+                                                        <img ng-src="{{tw.extended_entities.media[0].media_url}}" class="col-md-6 col-md-offset-6">
                                                         <!--<video ng-if="tw.extended_entities.media[0].type == 'video'" width="320" height="240" controls>-->
                                                         <!--<source src="movie.mp4" type="video/mp4">-->
                                                         <!--<source src="movie.ogg" type="video/ogg">-->
@@ -307,7 +307,7 @@
                                                         <!--{{tw.extended_entities.media[0].type}}-->
                                                         <!--{{tw.extended_entities.media[0].video_info.variants[0].url}}-->
                                                         <!--{{tw.extended_entities.media[0].url}}-->
-                                                        <img ng-src="{{tw.extended_entities.media[0].media_url}}" class="col-sm-10 col-md-offset-2">
+                                                        <img ng-src="{{tw.extended_entities.media[0].media_url}}" class="col-md-6 col-md-offset-6">
                                                         <!--<video ng-if="tw.extended_entities.media[0].type == 'video'" width="320" height="240" controls>-->
                                                         <!--<source src="movie.mp4" type="video/mp4">-->
                                                         <!--<source src="movie.ogg" type="video/ogg">-->
@@ -357,7 +357,7 @@
                                                         <!--{{tw.extended_entities.media[0].type}}-->
                                                         <!--{{tw.extended_entities.media[0].video_info.variants[0].url}}-->
                                                         <!--{{tw.extended_entities.media[0].url}}-->
-                                                        <img ng-src="{{tw.extended_entities.media[0].media_url}}" class="col-sm-10 col-md-offset-2">
+                                                        <img ng-src="{{tw.extended_entities.media[0].media_url}}" class="col-md-6 col-md-offset-6">
                                                         <!--<video ng-if="tw.extended_entities.media[0].type == 'video'" width="320" height="240" controls>-->
                                                         <!--<source src="movie.mp4" type="video/mp4">-->
                                                         <!--<source src="movie.ogg" type="video/ogg">-->
