--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -3,12 +3,15 @@
         <div class="row">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4>Cuentas
-                        <form method="post" class="pull-right" action="/auth/twitter">
-                            <input type="hidden" name="user"  value="{{user}}">
-                            <button type="submit" class="btn btn-primary">Login with Twitter</button>
-                        </form>
-                    </h4>
+                    <h4>Cuentas</h4>
+                </div>
+                <div class="panel-body">
+                    <p>Información cuenta:</p>
+                    <form method="post"action="/auth/twitter">
+                        <textarea id="informacion" name="informacion" maxlength="140"></textarea>
+                        <input type="hidden" name="user"  value="{{user}}">
+                        <button type="submit" class="btn btn-primary pull-right">Login with Twitter</button>
+                    </form>
                 </div>
                 <table class="table table-hover">
                     <tr>
