--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -69,16 +69,17 @@
                     <div class="row">
                         <textarea maxlength="140" ng-model="textoTweet" class="col-sm-10 col-md-offset-1" placeholder="Escribe aquí..."></textarea>
                     </div>
-                    <div class="container">
-                        <div class="row">
-                            <div class='col-sm-6'>
-                                <div class="form-group">
-                                    <div class='input-group date' id='datetimepicker1'>
-                                        <input type='text' class="form-control" />
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                                    </div>
+                    <div class="row">
+                        </br>
+                    </div>
+                    <!--<div class="container">-->
+                        <div class="row container-fluid">
+                            <div class="form-group">
+                                <div class='input-group date' id='datetimepicker1'>
+                                    <input type='text' class="form-control" />
+                                    <span class="input-group-addon">
+                                        <span class="glyphicon glyphicon-calendar"></span>
+                                    </span>
                                 </div>
                             </div>
                             <script type="text/javascript">
@@ -87,7 +88,7 @@
                                 });
                             </script>
                         </div>
-                    </div>
+                    <!--</div>-->
                     <div class="row">
                         <button type="button"class="btn btn-primary col-md-offset-8" ng-click="tweeetear(textoTweet);">Tweet</button>
                     </div>
