--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="row">
-                        <input type="text" maxlength="80" ng-model="url" class="col-sm-10 col-md-offset-1" placeholder="http://..."></input>
+                        <input type="text" maxlength="80" ng-model="url" class="col-sm-10 col-md-offset-1" placeholder="http://...">
                     </div>
                     <div class="row">
                         </br>
@@ -72,28 +72,24 @@
                     <div class="row">
                         </br>
                     </div>
-                    <!--<div class="container">-->
-                        <div class="row container-fluid">
-                            <div class="form-group">
-                                <div class='input-group date' id='datetimepicker1'>
-                                    <input type='text' class="form-control" ng-model="timeDate"/>
-                                    <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"></span>
-                                    </span>
-                                </div>
-                            </div>
-                            <script type="text/javascript">
-                                $(function () {
-                                    $('#datetimepicker1').datetimepicker();
-                                });
-                            </script>
-                        </div>
-                    <!--</div>-->
-                    <div class="row">
+                    <div class="row container-fluid">
                         <div class="form-group">
-                        <button type="button"class="btn btn-primary col-md-offset-8" ng-click="tweeetear(textoTweet);">Tweet</button>
-                        <button type="button"class="btn btn-info col-md-offset-8" ng-click="programar(textoTweet,timeDate);">Programar</button>
+                            <div class='input-group date col-xs-12' id='datetimepicker1'>
+                                <input type='text' class="form-control" ng-model="timeDate"/>
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                </span>
+                                <span class="input-group-btn">
+                                    <button type="button"class="btn btn-primary" ng-click="tweeetear(textoTweet);">Programar</button>
+                                    <button type="button"class="btn btn-primary" ng-click="tweeetear(textoTweet);">Tweet</button>
+                                </span>
+                            </div>
                         </div>
+                        <script type="text/javascript">
+                            $(function () {
+                                $('#datetimepicker1').datetimepicker();
+                            });
+                        </script>
                     </div>
                 </div>
             </div>
