--- a/public/views/adminStats.html
+++ b/public/views/adminStats.html
@@ -1,7 +1,16 @@
 <div class="container-fluid">
     <div class="col-md-4  container-fluid">
         <h3>Altas y bajas</h3>
-        <canvas id="line" class="chart chart-pie" chart-data="data" chart-labels="labels"
-                 chart-legend="true" ></canvas>
+        <canvas id="pie" class="chart chart-pie"
+                chart-data="pieData" chart-labels="pieLabels"
+                chart-legend="true">
+        </canvas>
+    </div>
+    <div class="col-md-4  container-fluid">
+        <h3>Últimos accesos</h3>
+        <canvas id="doughnut" class="chart chart-doughnut"
+                chart-data="doughnutData" chart-labels="doughnutLabels"
+                chart-legend="true">
+        </canvas>
     </div>
 </div>
