--- a/public/views/adminStats.html
+++ b/public/views/adminStats.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
-    <div class="col-md-4  container-fluid">
+    <div class="col-md-4">
         <h3>Altas y bajas</h3>
-        <canvas id="pie" class="chart chart-pie"
+        <canvas id="pie" class="chart chart-pie ng-show={{pieLabels}}"
                 chart-data="pieData" chart-labels="pieLabels"
                 chart-legend="true">
         </canvas>
     </div>
-    <div class="col-md-4  container-fluid">
+    <div class="col-md-4">
         <h3>Últimos accesos</h3>
-        <canvas id="doughnut" class="chart chart-doughnut"
+        <canvas id="doughnut" class="chart chart-doughnut ng-show={{doughnutData}}"
                 chart-data="doughnutData" chart-labels="doughnutLabels"
                 chart-legend="true">
         </canvas>
