Crea usuarios al arranque del sistema

--- a/public/views/adminStats.html
+++ b/public/views/adminStats.html
@@ -11,7 +11,7 @@
         <canvas class="chart-base" chart-type="type" chart-data="abaData" chart-labels="abaLabels"
                 chart-legend="true" chart-series="abaSeries">
         </canvas>
-        <button ng-click="change()">Cambiar</button>
+        <button type="button" class="btn btn-primary" ng-click="change()">Cambiar</button>
     </div>
     <div class="col-md-4  container-fluid">
         <h3>Últimos accesos</h3>
