--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -4,6 +4,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4>Cuentas</h4>
+                    <a ng-href="#/hashtags">Hashtags</a>
                 </div>
                 <div class="panel-body">
                     <p>Información cuenta:</p>
@@ -75,7 +76,8 @@
                     <div class="row container-fluid">
                         <div class="form-group">
                             <div class='input-group date col-xs-12' id='datetimepicker1'>
-                                <input type='text' class="form-control" ng-model="timeDate" palceholder="Selecciona Fecha"/>
+                                <input type='text' class="form-control" id="fechaInput" ng-model="timeDate" palceholder="Selecciona Fecha" value="see"/>
+                                <label ng-bind="timeDate"></label>
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar"></span>
                                 </span>
