--- a/public/views/perfil.html
+++ b/public/views/perfil.html
@@ -3,18 +3,15 @@
         <div class="row">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4>Cuentas</h4>
+                    <h4>Sidebar</h4>
                 </div>
                 <table class="table table-hover">
                     <tr>
                         <td>Perfil</td>
                     </tr>
                     <tr>
-                        <td>Otro</td>
-                    </tr>
-                    <tr>
                         <td>
-                            <span class="btn btn-danger btn-xs glyphicon glyphicon-trash text-center"   aria-hidden="true"></span>
+                            <span class="btn btn-danger" aria-hidden="true">Borrar cuenta</span>
                         </td>
                     </tr>
                 </table>
@@ -32,12 +29,10 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6">
-                            <h3>
                                 <div>
-                                    <a href="#" editable-text="user.nombre">{{user.nombre}}</a>
-                                    <a href="#" editable-text="user.apellidos">{{user.apellidos}}</a>
+                                    <p><strong>Nombre: </strong><a href="#" editable-text="user.nombre">{{user.nombre}}</a></p>
+                                    <p><strong>Apellidos: </strong><a href="#" editable-text="user.apellidos">{{user.apellidos}}</a></p>
                                 </div>
-                            </h3>
                             <p><strong>Email: </strong> {{user.email}}</p>
                             <div class="form-group">
                                 <button type="button" ng-click="modificarDatos(user)" class="btn btn-primary">Guardar cambios</button>
