--- a/public/views/hashtags.html
+++ b/public/views/hashtags.html
@@ -1,8 +1,139 @@
 <div class="container-fluid">
-    <div class="col-md-8  container-fluid">
-        <h3>HashTweets</h3>
+    <div class="col-md-4 col-sm-4 container-fluid">
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>Cuentas</h4>
+
+                </div>
+                <div class="panel-body">
+                    <p>Información cuenta: <a ng-href="#/hashtags" ng-if="cuentas.length > 0" class="pull-right">Hashtags</a></p>
+                    <form method="post"action="/auth/twitter">
+                        <textarea id="informacion" name="informacion" maxlength="140"></textarea>
+                        <input type="hidden" name="user"  value="{{user}}">
+                        <button type="submit" class="btn btn-primary pull-right">Login with Twitter</button>
+                    </form>
+                </div>
+                <table class="table table-hover">
+                    <tr>
+                        <th>
+                            Screen Name
+                        </th>
+                        <th>
+                            Información
+                        </th>
+                        <th>
+                            Borrar
+                        </th>
+                    </tr>
+                    <tr ng-repeat="c in cuentas">
+                        <td ng-click="tweets(c)" style="cursor: pointer">{{c.cuenta}}</td>
+                        <td ng-click="tweets(c)" style="cursor: pointer">{{c.info}}</td>
+                        <td ng-click="borrarCuenta(c)" style="cursor: help"  ng-confirm-click="Está seguro de borrar la cuenta de twitter de {{c.cuenta}}?">
+                            <span class="btn btn-danger btn-xs glyphicon glyphicon-trash text-center"   aria-hidden="true"></span>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>
+                        Acorta URLs
+                    </h4>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <input type="text" maxlength="80" ng-model="url" class="col-sm-10 col-md-offset-1" placeholder="http://...">
+                    </div>
+                    <div class="row">
+                        </br>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-1 control-label" for="singlebutton">Enlace: {{shortUrl}}</label>
+                        <div>
+                            <button id="singlebutton" type="button"class="btn btn-primary col-md-offset-8" ng-click="short(url);">Short!</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div ng-show="mostarTimelines" class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>
+                        Escribe tus tweets
+                    </h4>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <textarea maxlength="140" ng-model="textoTweet" class="col-sm-10 col-md-offset-1" placeholder="Escribe aquí..."></textarea>
+                    </div>
+                    <div class="row">
+                        </br>
+                    </div>
+                    <div class="row container-fluid">
+                        <div class="form-group">
+                            <div class='input-group date col-xs-12' id='datetimepicker1'>
+                                <input type='text' class="form-control" id="fechaInput" ng-model="timeDate" palceholder="Selecciona Fecha" value="see"/>
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                </span>
+                                <span class="input-group-btn">
+                                    <button type="button"class="btn btn-primary" ng-click="programar(textoTweet,timeDate);">Programar</button>
+                                    <button type="button"class="btn btn-primary" ng-click="tweeetear(textoTweet);">Tweet</button>
+                                </span>
+                            </div>
+                        </div>
+                        <script type="text/javascript">
+                            $(function () {
+                                $('#datetimepicker1').datetimepicker();
+                            });
+                        </script>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4 container-fluid">
-        <h3>Hashtags</h3>
+    <div class="col-md-8 col-sm-8 container-fluid" ng-show="mostarTimelines">
+        <div class="row quitarPadding">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>
+                        Información cuenta seleccionada
+                    </h4>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <h2>{{infoCuenta.screen_name}}</h2>
+                            <p><strong>Descripción: </strong> {{infoCuenta.description}}</p>
+                        </div><!--/col-->
+                        <div class="col-xs-12 col-sm-6">
+                            <div class="row">
+                                <div class="col-xs-24 col-sm-12 text-center">
+                                    <img ng-src="{{infoCuenta.profile_image_url}}"  alt="" class="center-block img-circle img-responsive">
+                                </div><!--/col-->
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-4">
+                                    <h2><strong> {{infoCuenta.followers_count}}</strong></h2>
+                                    <p><small>Followers</small></p>
+                                </div><!--/col-->
+                                <div class="col-xs-12 col-sm-4">
+                                    <h2><strong>{{infoCuenta.friends_count}}</strong></h2>
+                                    <p><small>Following</small></p>
+                                </div><!--/col-->
+                                <div class="col-xs-12 col-sm-4">
+                                    <h2><strong>{{infoCuenta.statuses_count}}</strong></h2>
+                                    <p><small>Tweets</small></p>
+                                </div><!--/col-->
+                            </div>
+                        </div>
+                    </div><!--/row-->
+                </div><!--/panel-body-->
+            </div><!--/panel-->
+        </div>
     </div>
 </div>
