--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -1,16 +1,13 @@
 <div class="container-fluid">
-    <div class="col-md-8  container-fluid">
-        <header><h3>Usuarios</h3></header>
-        <div ng-repeat="u in users">
-            <div class="col-md-2">
-                <img class="img-responsive" src="images/profile.svg">
-            </div>
-            <div class="col-md-6"></div>
-                <h4>{{u.email}}</h4>
-                <p>{{u.nombre}}</p>
-                <p>{{u.apellidos}}</p>
-
+    <header><h3>Usuarios</h3></header>
+    <div class="col-md-12  container-fluid" ng-repeat="u in users">
+        <div class="col-md-4">
+            <img class="img-responsive" src="images/profile.svg" width="100" height="100">
+        </div>
+        <div class="col-md-2"></div>
+            <h4>{{u.email}}</h4>
+            <p>{{u.nombre}}</p>
+            <p>{{u.apellidos}}</p>
         </div>
     </div>
-
 </div>
