--- a/public/views/hashtags.html
+++ b/public/views/hashtags.html
@@ -3,29 +3,14 @@
         <div class="row">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4>Cuentas</h4>
-
+                    <h4>Hashtags</h4>
                 </div>
                 <div class="panel-body">
-                    <p>Información cuenta: <a ng-href="#/hashtags" ng-if="cuentas.length > 0" class="pull-right">Hashtags</a></p>
-                    <form method="post"action="/auth/twitter">
-                        <textarea id="informacion" name="informacion" maxlength="140"></textarea>
-                        <input type="hidden" name="user"  value="{{user}}">
-                        <button type="submit" class="btn btn-primary pull-right">Login with Twitter</button>
-                    </form>
+                    <p>Escribe tu hashtag: </p>
+                    <input placeholder="#hashtag">
+                    <button type="text" class="btn btn-primary pull-right">Añadir #hashtag</button>
                 </div>
                 <table class="table table-hover">
-                    <tr>
-                        <th>
-                            Screen Name
-                        </th>
-                        <th>
-                            Información
-                        </th>
-                        <th>
-                            Borrar
-                        </th>
-                    </tr>
                     <tr ng-repeat="c in cuentas">
                         <td ng-click="tweets(c)" style="cursor: pointer">{{c.cuenta}}</td>
                         <td ng-click="tweets(c)" style="cursor: pointer">{{c.info}}</td>
