--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -1,13 +1,17 @@
 <div class="container-fluid">
     <header><h3>Usuarios</h3></header>
-    <div class="col-md-12  container-fluid" ng-repeat="u in users">
+    <div class="col-md-12  container-fluid" ng-repeat="u in users" ng-click="op">
         <div class="col-md-4">
             <img class="img-responsive" src="images/profile.svg" width="100" height="100">
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-md-2">
             <h4>{{u.email}}</h4>
             <p>{{u.nombre}}</p>
             <p>{{u.apellidos}}</p>
+        </div>
+        <div class="col-md-2">
+            <span class="btn btn-warning btn-xs glyphicon glyphicon-edit text-center"   aria-hidden="true"></span>
+            <span class="btn btn-info btn-xs glyphicon glyphicon-info-sign text-center"   aria-hidden="true"></span>
         </div>
     </div>
 </div>
