--- a/public/views/adminStats.html
+++ b/public/views/adminStats.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="col-md-12  container-fluid">
-        <div class="col-md-4  container-fluid">
+        <div ng-show="hayRecursos()" class="col-md-4  container-fluid">
             <h3>Recursos</h3>
             <canvas class="chart chart-doughnut" chart-data="rData" chart-labels="rLabels" chart-legend="true"></canvas>
         </div>
