--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -1,17 +1,27 @@
 <div class="container-fluid">
-    <header><h3>Usuarios</h3></header>
     <div class="col-md-12  container-fluid" ng-repeat="u in users" ng-click="op">
-        <div class="col-md-4">
-            <img class="img-responsive" src="images/profile.svg" width="100" height="100">
-        </div>
-        <div class="col-md-2">
-            <h4>{{u.email}}</h4>
-            <p>{{u.nombre}}</p>
-            <p>{{u.apellidos}}</p>
-        </div>
-        <div class="col-md-2">
-            <span class="btn btn-warning btn-xs glyphicon glyphicon-edit text-center"   aria-hidden="true"></span>
-            <span class="btn btn-info btn-xs glyphicon glyphicon-info-sign text-center"   aria-hidden="true"></span>
+        <div class="row quitarPadding">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <div class="row quitarPadding">
+                        <h3>{{u.email}}</h3>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <div class="col-md-2">
+                        <img class="img-responsive" src="images/profile.svg" width="50" height="50">
+                    </div>
+                    <div class="col-md-2">
+                        <p>Nombre: {{u.nombre}}</p>
+                        <p>Apellidos: {{u.apellidos}}</p>
+                    </div>
+                    <div class="col-md-2">
+                        <span class="btn btn-warning btn-xs glyphicon glyphicon-edit text-center"   aria-hidden="true"></span>
+                        <span class="btn btn-info btn-xs glyphicon glyphicon-info-sign text-center"   aria-hidden="true"></span>
+                        <span class="btn btn-danger btn-xs glyphicon glyphicon-trash text-center"   aria-hidden="true"></span>
+                    </div>
+                </div><!--/panel-body-->
+            </div><!--/panel-->
         </div>
     </div>
 </div>
