--- a/public/views/hashtags.html
+++ b/public/views/hashtags.html
@@ -7,41 +7,17 @@
                 </div>
                 <div class="panel-body">
                     <p>Escribe tu hashtag: </p>
-                    <input placeholder="#hashtag">
-                    <button type="text" class="btn btn-primary pull-right">Añadir #hashtag</button>
+                    <input placeholder="#hashtag" ng-model="hasht">
+                    <button type="text" class="btn btn-primary pull-right" ng-click="addHashTag(hasht)">Añadir #hashtag</button>
                 </div>
                 <table class="table table-hover">
-                    <tr ng-repeat="c in cuentas">
-                        <td ng-click="tweets(c)" style="cursor: pointer">{{c.cuenta}}</td>
-                        <td ng-click="tweets(c)" style="cursor: pointer">{{c.info}}</td>
-                        <td ng-click="borrarCuenta(c)" style="cursor: help"  ng-confirm-click="Está seguro de borrar la cuenta de twitter de {{c.cuenta}}?">
+                    <tr ng-repeat="hashtag in hashtags">
+                        <td ng-click="tweets(hashtag)" style="cursor: pointer">#{{hashtag}}</td>
+                        <td ng-click="borrarHashtag(hashtag)" style="cursor: pointer"  ng-confirm-click="Está seguro de borrar el #hashtag {{hashtag}}?">
                             <span class="btn btn-danger btn-xs glyphicon glyphicon-trash text-center"   aria-hidden="true"></span>
                         </td>
                     </tr>
                 </table>
-            </div>
-        </div>
-        <div class="row">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4>
-                        Acorta URLs
-                    </h4>
-                </div>
-                <div class="panel-body">
-                    <div class="row">
-                        <input type="text" maxlength="80" ng-model="url" class="col-sm-10 col-md-offset-1" placeholder="http://...">
-                    </div>
-                    <div class="row">
-                        </br>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-1 control-label" for="singlebutton">Enlace: {{shortUrl}}</label>
-                        <div>
-                            <button id="singlebutton" type="button"class="btn btn-primary col-md-offset-8" ng-click="short(url);">Short!</button>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="row">
