--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="col-md-12  container-fluid" ng-repeat="u in users" ng-click="op">
+    <div class="col-md-12  container-fluid" ng-repeat="u in users">
         <div class="row quitarPadding">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -16,9 +16,9 @@
                         <p>Apellidos: {{u.apellidos}}</p>
                     </div>
                     <div class="col-md-2">
-                        <span class="btn btn-warning btn-xs glyphicon glyphicon-edit text-center"   aria-hidden="true"></span>
-                        <span class="btn btn-info btn-xs glyphicon glyphicon-info-sign text-center"   aria-hidden="true"></span>
-                        <span class="btn btn-danger btn-xs glyphicon glyphicon-trash text-center"   aria-hidden="true"></span>
+                        <span class="btn btn-warning btn-xs glyphicon glyphicon-edit text-center" aria-hidden="true" ng-click="edit(u.email)"></span>
+                        <span class="btn btn-info btn-xs glyphicon glyphicon-stats text-center" aria-hidden="true" ng-click="info(u.email)"></span>
+                        <span class="btn btn-danger btn-xs glyphicon glyphicon-trash text-center" aria-hidden="true" ng-click="delete(u.email)"></span>
                     </div>
                 </div><!--/panel-body-->
             </div><!--/panel-->
