Admin borra usuarios

--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -18,7 +18,7 @@
                     <div class="col-md-2">
                         <span class="btn btn-warning btn-xs glyphicon glyphicon-edit text-center" aria-hidden="true" ng-click="edit(u.email)"></span>
                         <span class="btn btn-info btn-xs glyphicon glyphicon-stats text-center" aria-hidden="true" ng-click="info(u.email)"></span>
-                        <span class="btn btn-danger btn-xs glyphicon glyphicon-trash text-center" aria-hidden="true" ng-click="delete(u.email)"></span>
+                        <span class="btn btn-danger btn-xs glyphicon glyphicon-trash text-center" aria-hidden="true" ng-click="delete($index,u)"></span>
                     </div>
                 </div><!--/panel-body-->
             </div><!--/panel-->
