--- a/public/views/hashtags.html
+++ b/public/views/hashtags.html
@@ -12,7 +12,7 @@
                 </div>
                 <table class="table table-hover">
                     <tr ng-repeat="hashtag in hashtags">
-                        <td ng-click="tweets(hashtag)" style="cursor: pointer">#{{hashtag}}</td>
+                        <td ng-click="hashtagSelected(hashtag)" style="cursor: pointer">#{{hashtag}}</td>
                         <td ng-click="borrarHashtag(hashtag)" style="cursor: pointer"  ng-confirm-click="Está seguro de borrar el #hashtag {{hashtag}}?">
                             <span class="btn btn-danger btn-xs glyphicon glyphicon-trash text-center"   aria-hidden="true"></span>
                         </td>
@@ -34,25 +34,6 @@
                     <div class="row">
                         </br>
                     </div>
-                    <div class="row container-fluid">
-                        <div class="form-group">
-                            <div class='input-group date col-xs-12' id='datetimepicker1'>
-                                <input type='text' class="form-control" id="fechaInput" ng-model="timeDate" palceholder="Selecciona Fecha" value="see"/>
-                                <span class="input-group-addon">
-                                    <span class="glyphicon glyphicon-calendar"></span>
-                                </span>
-                                <span class="input-group-btn">
-                                    <button type="button"class="btn btn-primary" ng-click="programar(textoTweet,timeDate);">Programar</button>
-                                    <button type="button"class="btn btn-primary" ng-click="tweeetear(textoTweet);">Tweet</button>
-                                </span>
-                            </div>
-                        </div>
-                        <script type="text/javascript">
-                            $(function () {
-                                $('#datetimepicker1').datetimepicker();
-                            });
-                        </script>
-                    </div>
                 </div>
             </div>
         </div>
@@ -62,37 +43,55 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4>
-                        Información cuenta seleccionada
+                        Timeline hashtag @{{hassss}}
                     </h4>
                 </div>
                 <div class="panel-body">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
-                            <h2>{{infoCuenta.screen_name}}</h2>
-                            <p><strong>Descripción: </strong> {{infoCuenta.description}}</p>
-                        </div><!--/col-->
-                        <div class="col-xs-12 col-sm-6">
-                            <div class="row">
-                                <div class="col-xs-24 col-sm-12 text-center">
-                                    <img ng-src="{{infoCuenta.profile_image_url}}"  alt="" class="center-block img-circle img-responsive">
-                                </div><!--/col-->
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-4">
-                                    <h2><strong> {{infoCuenta.followers_count}}</strong></h2>
-                                    <p><small>Followers</small></p>
-                                </div><!--/col-->
-                                <div class="col-xs-12 col-sm-4">
-                                    <h2><strong>{{infoCuenta.friends_count}}</strong></h2>
-                                    <p><small>Following</small></p>
-                                </div><!--/col-->
-                                <div class="col-xs-12 col-sm-4">
-                                    <h2><strong>{{infoCuenta.statuses_count}}</strong></h2>
-                                    <p><small>Tweets</small></p>
-                                </div><!--/col-->
+                    <article class="row" ng-repeat="tw in tuita">
+                        <div class="col-md-3 col-sm-3 hidden-xs">
+                            <figure class="thumbnail">
+                                <img ng-src="{{tw.user.profile_image_url}}" class="img-responsive">
+                                <!--<figcaption class="text-center">{{tw.user.screen_name}}</figcaption>-->
+                            </figure>
+                        </div>
+                        <div class="col-md-9 col-sm-9d">
+                            <div class="panel panel-default arrow left">
+                                <div class="panel-body">
+                                    <header class="text-left">
+                                        <div class="comment-user"><i class="fa fa-user"></i> <strong>{{tw.user.name}}</strong> @{{tw.user.screen_name}}</div>
+                                    </header>
+                                    </br>
+                                    <div class="comment-post">
+                                        <p ng-bind-html="tw.text | convertState"></p>
+                                        <!--<p>-->
+                                        <!--{{getText(tw.text)}}-->
+                                        <!--</p>-->
+                                        <p>
+                                            <!--{{tw.extended_entities.media[0].type}}-->
+                                            <!--{{tw.extended_entities.media[0].video_info.variants[0].url}}-->
+                                            <!--{{tw.extended_entities.media[0].url}}-->
+                                            <img ng-src="{{tw.extended_entities.media[0].media_url}}" class="col-md-6 col-md-offset-6">
+                                            <!--<video ng-if="tw.extended_entities.media[0].type == 'video'" width="320" height="240" controls>-->
+                                            <!--<source src="movie.mp4" type="video/mp4">-->
+                                            <!--<source src="movie.ogg" type="video/ogg">-->
+                                            <!--{{tw.extended_entities.media[0].video_info.variants[0].url}}-->
+                                            <!--</video>-->
+                                            <!--<iframe ng-if="tw.extended_entities.media[0].type == 'video'" width="420" height="315"-->
+                                            <!--ng-src="/">-->
+                                            <!--</iframe>-->
+                                        </p>
+                                    </div>
+                                    <p class="text-right">
+                                        <!--<a class="btn btn-default btn-sm" href="#">-->
+                                        <!--<i class="fa fa-reply">-->
+                                        <!--</i> reply-->
+                                        <!--</a>-->
+                                        <time datetime="16-12-2014 01:05" class="comment-date"><i class="fa fa-clock-o"></i> {{tw.created_at}}</time>
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div><!--/row-->
+                    </article>
                 </div><!--/panel-body-->
             </div><!--/panel-->
         </div>
