--- a/public/views/perfil.html
+++ b/public/views/perfil.html
@@ -11,7 +11,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <span class="btn btn-danger" aria-hidden="true">Borrar cuenta</span>
+                            <span class="btn btn-danger" aria-hidden="true" ng-click="delete()">Borrar cuenta</span>
                         </td>
                     </tr>
                 </table>
