--- a/public/views/hashtags.html
+++ b/public/views/hashtags.html
@@ -53,7 +53,7 @@
                                             <!--{{tw.extended_entities.media[0].type}}-->
                                             <!--{{tw.extended_entities.media[0].video_info.variants[0].url}}-->
                                             <!--{{tw.extended_entities.media[0].url}}-->
-                                            <img ng-src="{{tw.extended_entities.media[0].media_url}}" class="col-md-6 col-md-offset-6">
+                                            <img ng-src="{{tw.entities.media[0].media_url}}" class="col-md-6 col-md-offset-6">
                                             <!--<video ng-if="tw.extended_entities.media[0].type == 'video'" width="320" height="240" controls>-->
                                             <!--<source src="movie.mp4" type="video/mp4">-->
                                             <!--<source src="movie.ogg" type="video/ogg">-->
